--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
   <nav>
     <ul>
-      <li><a href="#home" class="active">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="#home" class="active" class="indent">Home</a></li>
+      <li><a href="about.html" class="indent">About</a></li>
+      <li><a href="services.html" class="indent">Services</a></li>
+      <li><a href="skills.html" class="indent">Skills</a></li>
+      <li><a href="projects.html" class="indent">Projects</a></li>
+      <li><a href="blog.html" class="indent">Blog</a></li>
+      <li><a href="contact.html" class="indent">Contact</a></li>
     </ul>
   </nav>
   <!-- Header / Home Section -->
